--- a/Lesson3/tasks/task3.html
+++ b/Lesson3/tasks/task3.html
@@ -14,7 +14,7 @@
 		<div class="task__container">
 			<h1 class="task__title  title">Задача 3</h1>
 			<p class="task__text text">
-				3. Випадковим чином генерується число від 1 до 5. Спробуйте вгадати число за 2 спроби.
+				Випадковим чином генерується число від 1 до 5. Спробуйте вгадати число за 2 спроби.
 			</p>
 			<script>
 				//1. Вводимо необхідні дані
